# cmake_test

./: .gitignore  CMakeLists.txt
customer/: CMakeLists.txt  main.cpp
customer/scripts/: build_linux.sh  build_mac.sh  build_msvc.bat
lib/: CMakeLists.txt  lib.h
lib/libliba/: CMakeLists.txt  libliba.cpp  libliba.h
lib/liblibb/: liblibb.h
producer/: CMakeLists.txt
producer/lib/: CMakeLists.txt  lib.cpp
producer/lib/libliba/: CMakeLists.txt
producer/lib/liblibb/: CMakeLists.txt  liblibb.cpp
producer/scripts/: bash_msvc.sh  build_linux.sh  build_mac.sh  build_msvc.bat
scripts/: build_linux.sh  build_mac.sh  build_msvc.bat
