aux_source_directory(${CMAKE_CURRENT_LIST_DIR} LIBLIBASRC)
add_library(libliba ${LIBRARY_TYPE} ${LIBLIBASRC})

install(TARGETS libliba
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

message(WARNING ${CMAKE_CURRENT_LIST_DIR})