aux_source_directory(${CMAKE_CURRENT_LIST_DIR} LIBLIBASRC)
add_library(libliba ${LIBLIB_TYPE} ${LIBLIBASRC})

# if(NOT ("${LIB_TYPE}" STREQUAL "SHARED" AND "${LIBLIB_TYPE}" STREQUAL "STATIC"))
if(("${LIB_TYPE}" STREQUAL "STATIC") OR ("${LIBLIB_TYPE}" STREQUAL "SHARED"))
install(TARGETS libliba
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif()

message(STATUS ${CMAKE_CURRENT_LIST_DIR})