aux_source_directory(${CMAKE_CURRENT_LIST_DIR} LIBLIBBSRC)
add_library(liblibb ${LIBRARY_TYPE} ${LIBLIBBSRC})

install(TARGETS liblibb
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

message(WARNING ${CMAKE_CURRENT_LIST_DIR})