aux_source_directory(${CMAKE_CURRENT_LIST_DIR} LIBLIBBSRC)
add_library(liblibb ${LIBLIB_TYPE} ${LIBLIBBSRC})

# if(NOT ("${LIB_TYPE}" STREQUAL "SHARED" AND "${LIBLIB_TYPE}" STREQUAL "STATIC"))
if(("${LIB_TYPE}" STREQUAL "STATIC") OR ("${LIBLIB_TYPE}" STREQUAL "SHARED"))
install(TARGETS liblibb
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
endif()

message(STATUS ${CMAKE_CURRENT_LIST_DIR})